x86_handle_debug_exception(): The values of dr6 and dr7 are only stored in the CPU info, if x86_exit_user_debug_at_kernel_entry() was executed before, i.e. if the debug exception occurred in userlands. In all other cases we need to read the current register values. Fixes #5742, a regression introduced in r35951.

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@36340 a95241bf-73f2-0310-859d-f6bbb57e9c96